# pypulsar-rpc

./: README.md  docker-compose.yml  pyproject.toml
examples/: model.py  sleep_client.py  sleep_server.py
src/: __init__.py  client.py  exceptions.py  model.py  server.py
